cleaning the pages, link and img path functioning, css update

--- a/theme.scss
+++ b/theme.scss
@@ -12,7 +12,8 @@ $secondary: $bw_grey;
 $navbar-bg: lighten($primary, 10%);
 
 #quarto-content {
-    font-family: "Poppins", Sans-serif;
+    font-family: "Atkinson Hyperlegible", Sans-serif;
+    font-size: 1rem;
     color: black;
     padding-top: 0px;
 }
