--- a/docs/styles.css
+++ b/docs/styles.css
@@ -42,6 +42,27 @@
   text-align: center;
 }
 
+@media (max-width: 768px) {
+  .overlay-text {
+    font-size: 30px;
+  }
+
+  .overlay-img-container img {
+    width: 100%;
+    height: 610px;
+  }
+}
+
+@media (max-width: 480px) {
+  .overlay-text {
+    font-size: 20px;
+  }
+
+  .overlay-img-container img {
+    height: 400px;
+  }
+}
+
 .iframe {
   margin-bottom:0px;
 }
