--- a/www/theme.scss
+++ b/www/theme.scss
@@ -55,13 +55,16 @@ $navbar-bg: lighten($primary, 10%);
 
 .overlay-img-container img {
   width: 100%;
-  height: 810px;
+  height: 650px;
+  object-fit: cover;
 }
 
-.overlay-text-right {
+.overlay-text {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 50%;
-  left: 75%;
   transform: translate(-50%, -50%);
   color: white;
   background-color: rgba(0, 0, 0, 0.3);
@@ -69,46 +72,16 @@ $navbar-bg: lighten($primary, 10%);
   font-size: 20px;
   text-align: center;
   max-width: 500px;
+  min-height: 220px;
 }
 
 .overlay-text-left {
-  position: absolute;
-  top: 50%;
-  left: 25%;
-  transform: translate(-50%, -50%);
-  color: white;
-  background-color: rgba(0, 0, 0, 0.3);
-  padding: 10px;
-  font-size: 20px;
-  text-align: center;
-  max-width: 500px;
-  min-height: 200px;
+  left: 30%;
 }
 
-@media (max-width: 858px) {
-  .overlay-text {
-    font-size: 30px;
-  }
-
-  .overlay-img-container img {
-    width: 100%;
-    object-fit: cover;
-    height: 610px;
-  }
+.overlay-text-right {
+  left: 70%;
 }
-
-@media (max-width: 480px) {
-  .overlay-text {
-    font-size: 20px;
-  }
-
-  .overlay-img-container img {
-    height: 400px;
-    object-fit: cover;
-    width: 100%;
-  }
-}
-
 
 .listing-block {
     max-width: 1000px;
@@ -129,4 +102,29 @@ $navbar-bg: lighten($primary, 10%);
 
 .iframe {
   margin-bottom: 0px;
+}
+
+
+@media (max-width: 1030px) {
+  .overlay-text {
+    font-size: 15px;
+  }
+
+  .overlay-img-container img {
+    height: 610px;
+  }
+}
+
+@media (max-width: 480px) {
+  .overlay-text {
+    font-size: 20px;
+  }
+
+  .overlay-img-container img {
+    height: 400px;
+  }
+
+  .iframe {
+    width: 150px;
+  }
 }
